food hub project is completed

--- a/index.html
+++ b/index.html
@@ -135,6 +135,194 @@
                 </div>
             </div>
          </section>
+         <!-- testomonials section code is start -->
+         <section class="testomonial-sec">
+            <div class="testomonial-title">
+                <h2>Testomonials</h2>
+                <h5>Happy Costumers</h5>
+            </div>
+            <div class="testomonials-parent">
+                <div class="testomonial-items">
+                    <div class="testomonial-img">
+                        <img src="./images/teams/team-1.jpg" alt="">
+                    </div>
+                    <div class="testomonial-text">
+                        <h3>Mila Markovna</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt ducimus alias doloribus in deleniti quaerat commodi Rem sit! Rem, inventore fugit.</p>
+                       <div class="testomonial-icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                       </div>
+                    </div>        
+                </div>
+                <div class="testomonial-items">
+                    <div class="testomonial-img">
+                        <img src="./images/teams/team-2.jpg" alt="">
+                    </div>
+                    <div class="testomonial-text">
+                        <h3>Regina Miles</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt ducimus alias doloribus in deleniti quaerat commodi sit!  Rem Rem, inventore fugit.</p>
+                       <div class="testomonial-icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
+                       </div>
+                    </div>        
+                </div>
+                <div class="testomonial-items">
+                    <div class="testomonial-img">
+                        <img src="./images/teams/team-3.jpg" alt="">
+                    </div>
+                    <div class="testomonial-text">
+                        <h3>John Doe</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt ducimus alias doloribus in deleniti quaerat commodi Rem sit! Rem, inventore fugit.</p>
+                       <div class="testomonial-icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                       </div>
+                    </div>        
+                </div>
+                <div class="testomonial-items">
+                    <div class="testomonial-img">
+                        <img src="./images/teams/team-4.jpg" alt="">
+                    </div>
+                    <div class="testomonial-text">
+                        <h3>Michel Artez</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt ducimus alias doloribus in deleniti quaerat commodi Rem sit! Rem, inventore fugit.</p>
+                       <div class="testomonial-icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                       </div>
+                    </div>        
+                </div>
+                
+            </div>
+         </section>
+         <!-- blog section code start -->
+         <section class="blog-sec">
+            <div class="blog-title">
+                <h2>Our <span>Blog</span></h2>
+            </div>
+            <div class="blog-parent">
+                <div class="blog-items">
+                    <img src="./images/blog/memorie-1.jpg" alt="">
+                </div>
+            
+                <div class="blog-items">
+                    <img src="./images/blog/memorie-2.jpeg" alt="">
+                </div>
+                <div class="blog-items">
+                    <img src="./images/blog/memorie-3.jpeg" alt="">
+                </div>
+                <div class="blog-items">
+                    <img src="./images/blog/memorie-4.avif" alt="">
+                </div>
+                <div class="blog-items">
+                    <img src="./images/blog/memorie-9.webp" alt="">
+                </div>
+                <div class="blog-items">
+                    <img src="./images/blog/memorie-6.jpg" alt="">
+                </div>
+                <div class="blog-items">
+                    <img src="./images/blog/memorie-7.avif" alt="">
+                </div>
+                <div class="blog-items">
+                    <img src="./images/blog/memorie-8.jpg" alt="">
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- footer section code start -->
+    <footer>
+       <div class="footer-container">
+            <div class="footer-parent">
+                <div class="footer-items-1">
+                    <h2>Food Hub</h2>
+                    <p>Lorem, ipsum dolor consectetur sit amet consectetur adipisicing elit. Unde blanditiis nemo nihil est!</p>
+                    <h4>Follow Us -</h4>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+                <div class="footer-items-2">
+                    <h3>LATEST NEWS</h3>
+                    <div class="news-items">
+                        <div class="news-img">
+                            <img src="./images/footer-1.jpeg" alt="">
+                        </div>
+                        <div class="news-text">
+                            <h4>22jul2023</h4>
+                            <p>Li nov lingua franca va simplic Europan. simplice Europan.</p>
+                        </div>
+                    </div>
+                    <div class="news-items">
+                        <div class="news-img">
+                            <img src="./images/footer-2.webp" alt="">
+                        </div>
+                        <div class="news-text">
+                            <h4>22jul2023</h4>
+                            <p>Li nov lingua franca va simplic Europan. simplice Europan.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-items-3">
+                    <h3>Our Pages</h3>
+                    <ul>
+                        <li><i class="fa-solid fa-circle-check"></i>Terms And Condition</li>
+                        <li><i class="fa-solid fa-circle-check"></i>Cart</li>
+                        <li><i class="fa-solid fa-circle-check"></i>Checkout</li>
+                        <li><i class="fa-solid fa-circle-check"></i>FAQS</li>
+                        <li><i class="fa-solid fa-circle-check"></i>Shortcodes</li>
+                    </ul>
+                </div>
+                <div class="footer-items-4">
+                    <h3>Our contact</h3>
+                    <div class="contact-items">
+                        <div class="contact-icon">
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
+                        <div class="contact-text">
+                            <h4>Address</h4>
+                            <h5>Rainbow Drive Youngstown</h5>
+                        </div>
+                    </div>
+                    <div class="contact-items">
+                        <div class="contact-icon">
+                            <i class="fa-solid fa-phone-volume"></i>
+                        </div>
+                        <div class="contact-text">
+                            <h4>Contact Numbers</h4>
+                            <h5>1800 450 1245</h5>
+                        </div>
+                    </div>
+                    <div class="contact-items">
+                        <div class="contact-icon">
+                            <i class="fa-solid fa-clock"></i>
+                        </div>
+                        <div class="contact-text">
+                            <h4>Office Timings</h4>
+                            <h5>Mon - Fri 9.00am : 6.00pm</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+       </div>
+       <div class="copy">
+        <p>Copyrights &copy; 2023, All Rights Reserved by <span>Food Hub</span>  Shop</p>
+       </div>
+    </footer>
 </body>
 </html>
